--- a/andnext_app_whatsandroid/src/main/res/layout/activity_main.xml
+++ b/andnext_app_whatsandroid/src/main/res/layout/activity_main.xml
@@ -5,11 +5,12 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity"
+        android:id="@+id/container">
 
     <fragment
             android:tag="swipe"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:name="com.haiyunshan.demo.recyclerview.SimpleDragDemoFragment"/>
+            android:name="com.haiyunshan.demo.recyclerview.SwipePinMenuDemoFragment"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
