--- a/andnext_app_whatsandroid/src/main/res/values/styles.xml
+++ b/andnext_app_whatsandroid/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@drawable/anc_shape_texture_fabric</item>
     </style>
 
 </resources>
