--- a/andnext_app_whatsandroid/src/main/res/layout/activity_main.xml
+++ b/andnext_app_whatsandroid/src/main/res/layout/activity_main.xml
@@ -12,5 +12,5 @@
             android:tag="swipe"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:name="com.haiyunshan.demo.recyclerview.SwipePinMenuDemoFragment"/>
+            android:name="com.haiyunshan.demo.handwrite.HandWriteDemoFragment"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
