--- a/andnext_app_whatsnote/src/main/res/layout/fragment_code_preview.xml
+++ b/andnext_app_whatsnote/src/main/res/layout/fragment_code_preview.xml
@@ -5,6 +5,7 @@
         android:layout_height="match_parent">
 
     <androidx.core.widget.NestedScrollView
+            android:id="@+id/vertical_scroll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true">
@@ -15,6 +16,7 @@
                 android:orientation="horizontal">
 
             <HorizontalScrollView
+                    android:id="@+id/horizontal_scroll"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fillViewport="true">
@@ -28,7 +30,7 @@
                             android:id="@+id/tv_line"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:gravity="start"
+                            android:gravity="end"
                             android:padding="4dp"
                             android:textSize="12sp"
                             android:typeface="monospace"
