--- a/andnext_app_whatsandroid/src/main/res/layout/activity_help.xml
+++ b/andnext_app_whatsandroid/src/main/res/layout/activity_help.xml
@@ -7,10 +7,10 @@
         android:layout_height="match_parent"
         tools:context=".HelpActivity">
 
-    <club.andnext.markdown.MarkdownWebView
-            android:id="@+id/marked_view"
+    <WebView
+            android:id="@+id/webview"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-    </club.andnext.markdown.MarkdownWebView>
+    </WebView>
 </FrameLayout>
