--- a/andnext_app_whatsnote/src/main/res/layout/fragment_folder.xml
+++ b/andnext_app_whatsnote/src/main/res/layout/fragment_folder.xml
@@ -18,7 +18,8 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/content_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
         <com.google.android.material.appbar.AppBarLayout
                 android:layout_width="match_parent"
@@ -46,4 +47,17 @@
 
         </androidx.recyclerview.widget.RecyclerView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_scrollFlags="snap|scroll|exitUntilCollapsed">
+        <Button
+                android:id="@+id/btn_create_note"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="新建笔记"/>
+    </LinearLayout>
 </LinearLayout>
