support recent note

--- a/andnext_app_whatsnote/src/main/res/layout/activity_main.xml
+++ b/andnext_app_whatsnote/src/main/res/layout/activity_main.xml
@@ -9,6 +9,14 @@
         tools:context=".MainActivity">
 
     <Button
+            android:id="@+id/btn_recent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="最近项目"
+            />
+
+
+    <Button
             android:id="@+id/btn_folder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
