--- a/andnext_app_whatsnote/src/main/res/layout/fragment_base_record.xml
+++ b/andnext_app_whatsnote/src/main/res/layout/fragment_base_record.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
               xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
               android:orientation="vertical"
-             tools:context=".record.ShowRecordFragment">
-    
+             tools:context=".record.BaseRecordFragment">
+
+
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
