--- a/andnext_app_whatsnote/src/main/res/layout/fragment_create_tag.xml
+++ b/andnext_app_whatsnote/src/main/res/layout/fragment_create_tag.xml
@@ -40,7 +40,7 @@
                 android:layout_width="36dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical">
-            <ImageView
+            <club.andnext.widget.CircleColorButton
                     android:id="@+id/iv_target"
                     android:layout_width="12dp"
                     android:layout_height="12dp"
