--- a/andnext_app_whatsnote/src/main/res/layout/fragment_compose_article.xml
+++ b/andnext_app_whatsnote/src/main/res/layout/fragment_compose_article.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
               android:orientation="vertical"
              tools:context=".article.ComposeArticleFragment">
 
     <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             android:background="@color/colorPrimary">
@@ -20,7 +22,8 @@
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_list_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         </androidx.recyclerview.widget.RecyclerView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
