--- a/andnext_app_whatsnote/src/main/res/menu/menu_record_list_item.xml
+++ b/andnext_app_whatsnote/src/main/res/menu/menu_record_list_item.xml
@@ -3,6 +3,11 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+            android:id="@+id/menu_move"
+            android:title="移动"
+            app:showAsAction="always"/>
+
+    <item
             android:id="@+id/menu_tag"
             android:title="标签"
             app:showAsAction="always"/>
