--- a/andnext_app_whatsnote/src/main/res/layout/fragment_entrance.xml
+++ b/andnext_app_whatsnote/src/main/res/layout/fragment_entrance.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".entrance.RecordMainFragment">
+        tools:context=".entrance.EntranceFragment">
 
     <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
