--- a/andnext_app_whatsnote/src/main/res/layout/layout_compose_paragraph_list_item.xml
+++ b/andnext_app_whatsnote/src/main/res/layout/layout_compose_paragraph_list_item.xml
@@ -13,6 +13,7 @@
             android:layout_marginTop="?listPreferredItemPaddingLeft"
             android:layout_marginBottom="?listPreferredItemPaddingRight"
             android:background="@null"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            android:textColor="#000000"/>
 
 </LinearLayout>
