--- a/andnext_app_whatsnote/src/main/res/menu/menu_compose_article.xml
+++ b/andnext_app_whatsnote/src/main/res/menu/menu_compose_article.xml
@@ -19,4 +19,10 @@
             android:title="插入图片"
             android:icon="@drawable/ic_insert_photo_white_24dp"
             app:showAsAction="always"/>
+
+    <item
+            android:id="@+id/menu_share"
+            android:title="分享"
+            android:icon="@drawable/ic_share_white_24dp"
+            app:showAsAction="always"/>
 </menu>
